--- a/karen.tex
+++ b/karen.tex
@@ -8,7 +8,6 @@
 
 % Added packages
 \usepackage[usenames]{color}
-\usepackage{subfigure}
 \usepackage{amsfonts, amsmath, amssymb, graphics}
 
 % NOTE: bibentry MUST appear before the hyperref or build will fail
@@ -23,7 +22,7 @@
     citecolor=green,%
     filecolor=blue,%
     linkcolor=red,%
-    urlcolor=orange, 
+    urlcolor=red, 
 ]{hyperref}
 
 
@@ -48,6 +47,14 @@
 %%%% USEPACKAGES for MACROS %%%%%
 \usepackage{algpseudocode}
 \usepackage[chapter]{algorithm}
+\usepackage{caption}
+\usepackage{subcaption}
+\usepackage{url}
+
+\usepackage{array}
+\usepackage{arydshln}
+\usepackage{multirow}
+\usepackage{multicol}
 
 \input{macros/macros.tex}
 \input{macros/authnote_macros.tex}
