Fixed the subfigures

--- a/chapter4.tex
+++ b/chapter4.tex
@@ -74,13 +74,13 @@ Stencil Size ($n$) & $c_{1}$ & $c_{2}$ & $k$ & $\gamma_c$ \\ \hline
 \begin{center}
 \begin{subfigure}[b]{0.45\textwidth}
 	\centering
-	\includegraphics[width=2.85in]{figures/paper1/figures/vortex_rollup/eigs_N4096_n101_noHV.pdf}
+	\includegraphics[width=1.0\textwidth]{figures/paper1/figures/vortex_rollup/eigs_N4096_n101_noHV.pdf}
 	\caption{No Hypervsiscosity}
 	\label{fig:vortex_eigs_nohv}
 \end{subfigure}
 \begin{subfigure}[b]{0.45\textwidth}
 	\centering
-	\includegraphics[width=2.85in]{figures/paper1/figures/vortex_rollup/eigs_N4096_n101_HV_k4_gamma40.pdf}
+	\includegraphics[width=1.0\textwidth]{figures/paper1/figures/vortex_rollup/eigs_N4096_n101_HV_k4_gamma40.pdf}
 	\caption{With Hyperviscosity}
 	\label{fig:vortex_eigs_hv}
 \end{subfigure}
@@ -93,13 +93,13 @@ Stencil Size ($n$) & $c_{1}$ & $c_{2}$ & $k$ & $\gamma_c$ \\ \hline
 \begin{center}
 \begin{subfigure}[b]{0.45\textwidth}
 	\centering
-	\includegraphics[width=2.5in]{figures/paper1/figures/vortex_rollup/vortexComputedSolution-eps-converted-to.pdf}
+	\includegraphics[width=1.0\textwidth]{figures/paper1/figures/vortex_rollup/vortexComputedSolution-eps-converted-to.pdf}
 	\caption{Computed Solution}
 	\label{fig:vortex_approx}
 \end{subfigure} 
 \begin{subfigure}[b]{0.45\textwidth}
 	\centering
-	\includegraphics[width=2.5in]{figures/paper1/figures/vortex_rollup/vortexRelativeError-eps-converted-to.pdf}
+	\includegraphics[width=1.0\textwidth]{figures/paper1/figures/vortex_rollup/vortexRelativeError-eps-converted-to.pdf}
 	\caption{Relative Absolute Error}
 	\label{fig:vortex_relerr}
 \end{subfigure}
@@ -180,12 +180,12 @@ Stencil Size ($n$) & $c_{1}$ & $c_{2}$ & $k$ & $\gamma_c$ \\ \hline
 \begin{center}
 \begin{subfigure}[b]{0.45\textwidth}
 	\centering
-	\includegraphics[width=2.75in]{figures/paper1/figures/cosine_bell/eigs_N4096_n101_noHV_SCALED.pdf}
+	\includegraphics[width=1.0\textwidth]{figures/paper1/figures/cosine_bell/eigs_N4096_n101_noHV_SCALED.pdf}
 	\caption{No Hyperviscosity}
 	\label{fig:cosine_eigs_nohv}
 \end{subfigure}
 \begin{subfigure}[b]{0.45\textwidth}
-	\includegraphics[width=2.75in]{figures/paper1/figures/cosine_bell/eigs_HV_N4096_n101_k8_gamma5e_m2_SCALED.pdf}
+	\includegraphics[width=1.0\textwidth]{figures/paper1/figures/cosine_bell/eigs_HV_N4096_n101_k8_gamma5e_m2_SCALED.pdf}
 	\caption{With Hyperviscosity}
 	\label{fig:cosine_eigs_hv}
 \end{subfigure}
@@ -198,12 +198,12 @@ Stencil Size ($n$) & $c_{1}$ & $c_{2}$ & $k$ & $\gamma_c$ \\ \hline
 \begin{figure}[ht!]
 \begin{center}
 \begin{subfigure}[b]{0.45\textwidth}
-	\includegraphics[width=2.4in]{figures/paper1/figures/cosine_bell/trimmed_ComputedSolution_ManualBar.pdf}
+	\includegraphics[width=1.0\textwidth]{figures/paper1/figures/cosine_bell/trimmed_ComputedSolution_ManualBar.pdf}
 	\caption{10 Revolutions}
 	\label{fig:cosine_approx}
 \end{subfigure}
 \begin{subfigure}[b]{0.45\textwidth}
-	\includegraphics[width=2.6in]{figures/paper1/figures/cosine_bell/trimmed_Error_CoveredScale2.pdf}
+	\includegraphics[width=1.0\textwidth]{figures/paper1/figures/cosine_bell/trimmed_Error_CoveredScale2.pdf}
 	\caption{Absolute Error at $10$ Revolutions}
 	\label{fig:cosine_abserror}
 \end{subfigure}
