Cleaned top directory. Going to integrate more content

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -1,5 +1,34 @@
 %!TEX root =  karen.tex
 
+\begin{verbatim}
+- what is new in the thesis (summarize: 1-2 pages)
+- get all your figues
+- 1/2 page description per figures
+  All figure captions (self-contained). Don't skimp on words.
+- Previous work
+  GPUS/implicit methods
+  GPUS/RBF
+  RBF/Finite-Difference
+  Preconditionners (info on that)
+   Sparse matrix libraries
+  Various GPU/based libraries
+   Parallel implementations of RBF (there are any?)
+
+Benchmarking....
+   Timing (serial, parallel)
+   Timing with special node reorderings. Explain logic
+
+Test cases ...
+
+Get all your references in bibtex. Send them to me.
+
+
+Need detailed table of content.
+\end{verbatim}
+
+
+
+
 \chapter{Introduction}
 
 \section{Introduction}
