Just writing random stuff. Hopefully as it dumps from my brain Ill be able to coalesce it into something coherent. Also stimulating brain waves

--- a/unused/acknowledgments.tex
+++ b/unused/acknowledgments.tex
@@ -1,2 +1,21 @@
 \begin{acknowledgments}
+
+    For their impactful guidance and support I would like to thank Bengt Fornberg, Kiran Katta as a continuous sounding board. 
+
+    Much of my knowledge of GPU programming originated with my work on the
+    Master's Thesis at Florida State University in the Summer and Fall 2008
+    semesters.
+
+    My first internship in the Summer Internships for Parallel Scientific
+    Computational Science (SIParCS) introduced me to the complexities of
+    complexities of community models and their use of underlying numerical
+    methods. The wonderful guideance of Rory Kelly and Jos\'{e} Garcia showed
+    me the importance of reworking numerical methods for the GPU. blah blah.
+    Thanks to Michael Oberg, Matthew XXX, Jennifer XXX and John Dennis for
+    their guidance
+
+    My dissertation was an attempt to continue the process of improving
+    community models. Thanks to NCAR, IMAGe, Ram Nair, Bengt Fornberg, Grady Wright, Joseph Lohmeier, Steven Henke
+
+    Finally,  
 \end{acknowledgments}
