Figured out a workflow to use vim and texshop

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -26,7 +26,15 @@ Get all your references in bibtex. Send them to me.
 Need detailed table of content.
 \end{verbatim}
 
+Conditioning is defined as: 
 
+With condition number estimates we can choose a proper support parameter for uniformly distributed node sets.
+
+Alternative algorithms exist for solving for RBF-FD weights when the systems are overly ill-conditioned. Currently, we have an unpublished algorithm ContourSVD available to play with (demonstrate accuracy improvements). 
+
+We make the assumption for now that we use regularly distributed nodes. Centroidal Voronoi tessellations provide reasonably good distributions for solutions. Examples (heat ellipse, ellipsoid, sphere, square cavity).
+
+The motivation behind RBF-FD is generality/functionality in the numerical method. Scattered nodes are supported. Distribution requires proper choice of support, and tight nodes result in increased conditioning
 
 
 \chapter{Introduction}
