--- a/karen.tex
+++ b/karen.tex
@@ -66,14 +66,14 @@
 \begin{document}
 
 %% UNCOMMENT THIS FOR ETD CLEARANCE
-%\frontmatter
+\frontmatter
 %\maketitle
 %\makecommitteepage
 %%
 %\input{dedication.tex}
 %\input{acknowledgments.tex}
 %%
-%\tableofcontents
+\tableofcontents
 %\listoftables
 %\listoffigures
 %\listofalgorithms
