--- a/hardware.tex
+++ b/hardware.tex
@@ -1,6 +1,6 @@
 %!TEX root = karen.tex
 
-We propose the implementation of an efficient multi-node, multi-GPU RBF PDE package to run on clusters of GPU compute nodes. Each compute node has one or more GPUs attached. Specifically, we utilize the hardware available in the FSU HPC Spear cluster and the NFS funded Keeneland project. While the Spear cluster is only a handful of nodes with 2 GPUs each, Keeneland boasts a total of 240 CPUs and 320 GPUs. The large scale of Keeneland allows us to verify the scaling of our method. 
+We present our implementation of an efficient multi-node, multi-GPU RBF PDE package to run on clusters of GPU compute nodes. Each compute node has one or more GPUs attached. Specifically, we utilize the hardware available in the FSU HPC Spear cluster and the NFS funded Keeneland project. While the Spear cluster is only a handful of nodes with 2 GPUs each, Keeneland boasts a total of 240 CPUs and 320 GPUs. The large scale of Keeneland allows us to verify the scaling of our method. 
 
 \section{OpenCL}
 We leverage the OpenCL language for functional portability. 
@@ -13,10 +13,33 @@ The market is volatile. Companies survive by investing margins in their next gre
 \subsection{Asynchronous Queuing} 
 Provide details and simple example of how asynchronous queueing can be used. 
 
+Need a figure showing the overlapping comm and comp in a general process with the wait points marked. 
 
 \section{Fermi Architecture}
 
-In the Spring of 2010 NVidia publicly released a new architecture code named ``Fermi"
+
+In Spring 2010, NVidia will publicly release a new architecture code named "Fermi" \cite{Fermi:2009}. The new hardware will support many features of interest, the most important being 8x faster double precision than the older Tesla C1060 (GT200 architecture). It will also allow for concurrent kernel execution (for up to 16 small kernels) making it easier to keep the GPU saturated with computation. Table~\ref{tbl:fermi_compare} considers some of the more monumental differences between the Fermi and GT200 architectures.
+\begin{table}[t]
+\begin{center}
+\begin{tabular}{D|C|C|}
+ & Fermi & GT200 \\ 
+ \hline\hline
+ \# of concurrent kernels & 16 & 1 \\
+ Warps scheduled concurrently & 2 & 1 \\
+ Clock cycles to dispatch instruction to warp & 2 & 4 \\
+ Caching on Global Device Memory & Yes & No \\
+ Shared memory & 64 KB & 16 KB \\
+ Shared memory banks & 32 & 16 \\
+ Bank conflict free FP64 access & Yes & No \\
+ Cycles to read FP64 (from shared memory) & 2 & 32 \\
+ Max allowed warps & 48 & 32 \\
+\end{tabular}
+\end{center}
+\caption{Comparison of NVidia's new Fermi architecture to the GT200 architecture used for GTX 280, Tesla C1060 and other GPUs in use today.}
+\label{tbl:fermi_compare}
+\end{table}%
+
+%While there has been no word yet as to the date of availability (only speculation for Q1 2010), the Fermi architecture is anticipated to cost around \$2,500 to \$4,000 for the Tesla C2050 (3 GB Global Device Memory) and C2070 (6 GB Global Device Memory) units respectively \cite{FermiPrice:2009}.
 
 \subsection{Double Precision}
 Double precision operations take XXX cycles
@@ -26,7 +49,7 @@ Double precision operations take XXX cycles
 Local caching allows us to bypass the need for 
 
 \subsection{Multiple Kernel Scheduling}
-
+describe fermi's ability to schedule multiple kernels, what it means for our queues. Do we need multiple queues, or just one that is non-blocking. How do we indicate we are done communicating if there is no queue to add markers to? 
 
 \subsection{Future NVidia Hardware}
 The latest hardware is the Kepler. It supports the following features
@@ -129,31 +152,6 @@ The latest hardware is the Kepler. It supports the following features
 
 
 \section{Future Hardware}
-
-In Spring 2010, NVidia will publicly release a new architecture code named "Fermi" \cite{Fermi:2009}. The new hardware will support many features of interest, the most important being 8x faster double precision than the older Tesla C1060 (GT200 architecture). It will also allow for concurrent kernel execution (for up to 16 small kernels) making it easier to keep the GPU saturated with computation. Table~\ref{tbl:fermi_compare} considers some of the more monumental differences between the Fermi and GT200 architectures.
-\begin{table}[t]
-\begin{center}
-\begin{tabular}{D|C|C|}
- & Fermi & GT200 \\ 
- \hline\hline
- \# of concurrent kernels & 16 & 1 \\
- Warps scheduled concurrently & 2 & 1 \\
- Clock cycles to dispatch instruction to warp & 2 & 4 \\
- Caching on Global Device Memory & Yes & No \\
- Shared memory & 64 KB & 16 KB \\
- Shared memory banks & 32 & 16 \\
- Bank conflict free FP64 access & Yes & No \\
- Cycles to read FP64 (from shared memory) & 2 & 32 \\
- Max allowed warps & 48 & 32 \\
-\end{tabular}
-\end{center}
-\caption{Comparison of NVidia's new Fermi architecture to the GT200 architecture used for GTX 280, Tesla C1060 and other GPUs in use today.}
-\label{tbl:fermi_compare}
-\end{table}%
-
-While there has been no word yet as to the date of availability (only speculation for Q1 2010), the Fermi architecture is anticipated to cost around \$2,500 to \$4,000 for the Tesla C2050 (3 GB Global Device Memory) and C2070 (6 GB Global Device Memory) units respectively \cite{FermiPrice:2009}.
-
-Additionally, the FSU HPC group (supported by the Department of Scientific Computing) has several grants in play, which may lead to the acquisition of an additional GPU cluster. 
 
 %In this section we survey existing hardware features, and their existence in large clusters.
 %\begin{verbatim}
